Estilizado os filtros de promoção. Criado diretórios para componentes da página e objetos que possam ser reutilizados.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
       <nav class="filters-navigation">
         <div class="filters-container">
-          <a href="#" class="filter">All Promotions</a>
-          <a href="#" class="filter">New Customers</a>
+          <a href="#" class="filter-promo" data-active="false">All Promotions</a>
+          <a href="#" class="filter-promo" data-active="true">New Customers</a>
         </div>
       </nav>
 
