Criado o JavaScript para fazer a chamada a API e renderizar as promoções na página.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Addison Global</title>
     <link rel="stylesheet" href="./css/main.css" />
+    <script defer src="./js/index.js" type="module"></script>
   </head>
   <body>
     <div class="container">
@@ -18,67 +19,7 @@
         </div>
       </nav>
 
-      <section class="promotions-section">
-        <div class="promotion-card">
-          <div class="image">
-            <img src="https://via.placeholder.com/600x300" alt="" />
-          </div>
-
-          <h2 class="title">Promotion One</h2>
-
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-
-          <div class="buttons-container">
-            <a href="#" class="btn-primary">Terms & Conditions</a>
-            <a href="#" class="btn-primary -dark -join">Join Now</a>
-          </div>
-        </div>
-
-        <div class="promotion-card">
-          <div class="image">
-            <img src="https://via.placeholder.com/600x300" alt="" />
-          </div>
-
-          <h2 class="title">Promotion Two</h2>
-
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-
-          <div class="buttons-container">
-            <a href="#" class="btn-primary">Terms & Conditions</a>
-            <a href="#" class="btn-primary -dark -join">Join Now</a>
-          </div>
-        </div>
-
-        <div class="promotion-card">
-          <div class="image">
-            <img src="https://via.placeholder.com/600x300" alt="" />
-          </div>
-
-          <h2 class="title">Promotion Three</h2>
-
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-
-          <div class="buttons-container">
-            <a href="#" class="btn-primary">Terms & Conditions</a>
-            <a href="#" class="btn-primary -dark -join">Join Now</a>
-          </div>
-        </div>
-      </section>
+      <section class="promotions-section"></section>
     </div>
   </body>
 </html>
