--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
     <div class="container">
       <nav class="filters-navigation">
         <div class="filters-container">
-          <a href="#" class="filter-promo" data-active="false"
+          <a
+            href="#"
+            class="filter-promo"
+            data-id="filter"
+            data-active="true"
+            data-value="all"
             >All Promotions</a
           >
-          <a href="#" class="filter-promo" data-active="true">New Customers</a>
+          <a
+            href="#"
+            class="filter-promo"
+            data-id="filter"
+            data-active="false"
+            data-value="newCustomers"
+            >New Customers</a
+          >
         </div>
       </nav>
 
